After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751322 - incorrect dependency specified in configure.ac for poppler
incorrect dependency specified in configure.ac for poppler
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
git master
Other Linux
: High normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-22 13:29 UTC by Dominique Leuenberger
Modified: 2016-02-02 17:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Bump poppler requirements to 0.32.0 (934 bytes, patch)
2015-06-23 22:26 UTC, Germán Poo-Caamaño
none Details | Review
Bump poppler requirements to 0.33.0 (2.22 KB, patch)
2016-02-01 18:42 UTC, Germán Poo-Caamaño
committed Details | Review

Description Dominique Leuenberger 2015-06-22 13:29:06 UTC
According to configure, we require poppler 0.24 to build evince as of now.

This though is not true,as it fails with:

[  107s] CREATED evince-pdfdocument.metainfo.xml
[  108s] ev-poppler.cc: In function 'void pdf_document_annotations_save_annotation(EvDocumentAnnotations*, EvAnnotation*, EvAnnotationsSaveMask)':
[  108s] ev-poppler.cc:3342:3: error: 'PopplerAnnotTextMarkup' was not declared in this scope
[  108s]    PopplerAnnotTextMarkup *text_markup = POPPLER_ANNOT_TEXT_MARKUP (poppler_annot);
[  108s]    ^
[  108s] ev-poppler.cc:3342:27: error: 'text_markup' was not declared in this scope
[  108s]    PopplerAnnotTextMarkup *text_markup = POPPLER_ANNOT_TEXT_MARKUP (poppler_annot);
[  108s]                            ^
[  108s] ev-poppler.cc:3342:81: error: 'POPPLER_ANNOT_TEXT_MARKUP' was not declared in this scope
[  108s]    PopplerAnnotTextMarkup *text_markup = POPPLER_ANNOT_TEXT_MARKUP (poppler_annot);
[  108s]                                                                                  ^
[  108s] ev-poppler.cc:3355:69: error: 'poppler_annot_text_markup_get_quadrilaterals' was not declared in this scope
[  108s]     quads = poppler_annot_text_markup_get_quadrilaterals (text_markup);
[  108s]                                                                      ^
[  108s] ev-poppler.cc:3356:67: error: 'poppler_annot_get_rectangle' was not declared in this scope
[  108s]     poppler_annot_get_rectangle (POPPLER_ANNOT (text_markup), &rect);
[  108s]                                                                    ^
[  108s] ev-poppler.cc:3360:94: error: 'poppler_annot_text_markup_new_highlight' was not declared in this scope
[  108s]      new_annot = poppler_annot_text_markup_new_highlight (pdf_document->document, &rect, quads);
[  108s]                                                                                               ^
[  108s] ev-poppler.cc:3363:94: error: 'poppler_annot_text_markup_new_strikeout' was not declared in this scope
[  108s]      new_annot = poppler_annot_text_markup_new_strikeout (pdf_document->document, &rect, quads);
[  108s]                                                                                               ^
[  108s] ev-poppler.cc:3366:94: error: 'poppler_annot_text_markup_new_underline' was not declared in this scope
[  108s]      new_annot = poppler_annot_text_markup_new_underline (pdf_document->document, &rect, quads);
[  108s]                                                                                               ^


Thoee symbols have only been present since poppler 0.26
Comment 1 Germán Poo-Caamaño 2015-06-23 22:26:53 UTC
Created attachment 305964 [details] [review]
Bump poppler requirements to 0.32.0

Although trivial to fix, here is the patch bumping to 0.32.0 and get the benefits of all poppler improvements since 0.24.0.
Comment 2 Germán Poo-Caamaño 2015-06-23 22:29:05 UTC
After this one, we need to update jhbuild moduleset, and make sure it is ok before the next stable release.
Comment 3 Carlos Garcia Campos 2015-06-27 08:54:26 UTC
Why 0.32 and not 0.33? The problem is that poppler was moved to sysdeps in jhbuild, and I'm sure distros don't ship 0.32 nor 0.33 yet. In other cases I try to be conservative bumping deps, and add conditional compilation, but for an important feature like highlight annots, I prefer to bump the requirements and make sure all our users in GNOME 3.18 will benefit from it.
Comment 4 Carlos Garcia Campos 2015-06-27 08:56:04 UTC
Review of attachment 305964 [details] [review]:

There some conditional compilation we can remove if we use a newer poppler. See AC_CHECK_FUNCS(poppler_annot_markup_set_popup_rectangle) in configure and the #ifdef HAVE_POPPLER_ANNOT_MARKUP_SET_POPUP_RECTANGLE in ev-poppler.cc
Comment 5 Germán Poo-Caamaño 2015-10-15 15:58:00 UTC
I think we missed the bus here :-)

Maybe for 3.20 release cycle, we would need to move out poppler from sysdeps in jhbuild.
Comment 6 Germán Poo-Caamaño 2016-02-01 18:25:47 UTC
The Release Team (mclasen actually) is ok with bumping poppler to 0.33.

0.33 is in ubuntu stable (wily) and 0.34 is in f23.

<gpoo> hi. in Evince we would like to bump the poppler version (to support annotations always rather than disable them at build time). Poppler currently is a system dependency. Are you ok with that?
<mclasen> how far are you going to bump it ?
<mclasen> if it is a stable version and not bleeding edge, I don't see a reason not to
<gpoo> considering we are going to bump it, I would prefer to bump to the newest one (0.40), besides annotations it has many fixes in rendering and performance, and keep it there for a while. Otherwise, to the 0.32.
<gpoo> poppler is very conservative with API changes and in general.
<gpoo> and, yes, we would bump it to a stable version.
<mclasen> for comparsion, fedora versions: f22: 0.30 f23: 0.34, rawhide: 0.40
<mclasen> so if you go all the way up to 0.40, you are leaving sysdeps territory
<gpoo> debian stable has 0.26, so I guess we would leave sysdeps anyway
<rishi> Do people really use Debian stable for GNOME development?
<gpoo> IIRC, when we moved cairo out once from sysdeps, we considered it (sort of worst case)
<mclasen> I think the current stable ubuntu release would be more relevant
<gpoo> 0.33 is the current version in ubuntu stable
<gpoo> (not lts)
<gpoo> does 0.33 sound right, then?
<mclasen> sounds ok to me
<gpoo> ok
Comment 7 Germán Poo-Caamaño 2016-02-01 18:42:38 UTC
Created attachment 320208 [details] [review]
Bump poppler requirements to 0.33.0

It is the newer poppler stable release.  It has new API required
by Evince to handle annotations (since 0.26.0 at least), and it
has improvements that makes Evince work properly.
    
0.33.0 is old enough to keep poppler as sysdep in jhbuild.
Comment 8 Germán Poo-Caamaño 2016-02-02 17:01:32 UTC
Review of attachment 320208 [details] [review]:

Pushed in master